<resources>
    <string name="app_name">\u5c0f\u67da</string>
    <string name="omni_app_name">\u5c0f\u67da</string>
    <string name="quick_log_widget_title">记忆</string>
    <string name="quick_log_widget_description">从桌面快速记录内容，并同步到短期记忆</string>
    <string name="quick_log_widget_add">新增</string>
    <string name="quick_log_widget_open">记忆</string>
    <string name="quick_log_widget_edit">编辑</string>
    <string name="quick_log_widget_delete">删除</string>
    <string name="quick_log_widget_empty_hint">还没有记忆，点 + 写下一条。</string>
    <string name="quick_log_add_task">写入记忆</string>
    <string name="quick_log_edit_task">编辑记忆</string>
    <string name="quick_log_delete_task">删除记忆</string>
    <string name="quick_log_settings_title">小组件设置</string>
    <string name="quick_log_settings_done">完成</string>
    <string name="quick_log_opacity">不透明度</string>
    <string name="quick_log_widget_color">插件颜色</string>
    <string name="quick_log_font_size">字号</string>
    <string name="quick_log_font_small">小</string>
    <string name="quick_log_font_regular">常规</string>
    <string name="quick_log_font_large">大</string>
    <string name="quick_log_entry_title">写入记忆</string>
    <string name="quick_log_entry_subtitle">写下想记住的内容，小柚会把它同步到短期记忆。</string>
    <string name="quick_log_entry_edit_title">编辑记忆</string>
    <string name="quick_log_entry_edit_subtitle">这里的修改会同步回短期记忆。</string>
    <string name="quick_log_entry_hint">写下想记住的内容</string>
    <string name="quick_log_cancel">取消</string>
    <string name="quick_log_save">保存</string>
    <string name="quick_log_update">更新</string>
    <string name="quick_log_delete">删除</string>
    <string name="quick_log_content_required">先写下要记住的内容吧</string>
    <string name="quick_log_save_success">记忆已保存</string>
    <string name="quick_log_save_failed">保存失败，请重试</string>
    <string name="quick_log_update_success">记忆已更新</string>
    <string name="quick_log_update_failed">更新失败，请重试</string>
    <string name="quick_log_delete_success">记忆已删除</string>
    <string name="quick_log_delete_failed">删除失败，请重试</string>
    <string name="quick_log_not_found">这条记忆已经不存在了</string>
</resources>
